Plateau de la partie contre l'IA fonctionnel (l'IA pour l'instant joue un coup random) + traduction complétée pour la partie IA + setCasesAtteignablesTourUn() et setCasesAtteignablesJoueurCourant() opérationnelles + correction 'Marie-Lucile' dans les crédits

--- a/src/Traductions/base_traductions/boutons.properties
+++ b/src/Traductions/base_traductions/boutons.properties
@@ -1,9 +1,9 @@
 titre = Kamisado
 partieLocale = Local game
-defierIA = Challenge IA
+defierIA = Challenge AI
 partieReseau = Online game
 chargerPartie = Load a game
-historique = Historic
+historique = Historics
 statistiques = Statistics
 options = Options
 credits = Credits
