--- a/src/Traductions/boutons.properties
+++ b/src/Traductions/boutons.properties
@@ -1,9 +1,9 @@
 titre = Kamisado
 partieLocale = Local game
-defierIA = Challenge IA
+defierIA = Challenge AI
 partieReseau = Online game
 chargerPartie = Load a game
-historique = Historic
+historique = Historics
 statistiques = Statistics
 options = Options
 credits = Credits
