Possibilité de choisir et d'ajouter des pseudos + affichage de la liste des parties dont on peut consulté l'historique (= popup en appuyant sur "Historique" dans le menu

--- a/src/Traductions/base_traductions/boutons.properties
+++ b/src/Traductions/base_traductions/boutons.properties
@@ -8,3 +8,5 @@ statistiques = Statistics
 options = Options
 credits = Credits
 quitter = Exit
+retourMenu = Back to menu
+ajouterPseudo = New player
