--- a/src/Traductions/boutons.properties
+++ b/src/Traductions/boutons.properties
@@ -8,3 +8,5 @@ statistiques = Statistics
 options = Options
 credits = Credits
 quitter = Exit
+retourMenu = Back to menu
+ajouterPseudo = New player
