Possibilité de revoir une partie finie

--- a/src/Traductions/base_traductions/boutons.properties
+++ b/src/Traductions/base_traductions/boutons.properties
@@ -10,3 +10,6 @@ credits = Credits
 quitter = Exit
 retourMenu = Back to menu
 ajouterPseudo = New player
+retour = Menu
+precedent = previous
+suivant = next
