--- a/src/Traductions/boutons.properties
+++ b/src/Traductions/boutons.properties
@@ -1,4 +1,4 @@
-titre = Kamisado
+titre= Kamisado
 partieLocale = Local game
 defierIA = Challenge AI
 partieReseau = Online game
@@ -10,3 +10,6 @@ credits = Credits
 quitter = Exit
 retourMenu = Back to menu
 ajouterPseudo = New player
+retour = Menu
+precedent = previous
+suivant = next
