Rectification visuel barre de menu en haut + traductions du menu à jour

--- a/src/Traductions/boutons.properties
+++ b/src/Traductions/boutons.properties
@@ -1,4 +1,4 @@
-titre= Kamisado
+titre = Kamisado
 partieRapide = Quick game
 partieLocale = Local game
 defierIA = Challenge AI
@@ -14,3 +14,4 @@ ajouterPseudo = New player
 retour = Menu
 precedent = previous
 suivant = next
+undo = undo
