--- a/src/Traductions/boutons.properties
+++ b/src/Traductions/boutons.properties
@@ -2,7 +2,7 @@ titre = Kamisado
 partieRapide = Quick game
 partieLocale = Local game
 defierIA = Challenge AI
-partieReseau = Online game
+partieReseau = Let's play !
 chargerPartie = Load a game
 historique = Historics
 statistiques = Statistics
@@ -17,3 +17,6 @@ suivant = next
 undo = undo
 musiqueOn = on
 musiqueOff = off
+rejoindrePartie = Join the game
+rejoindreUnePartieEnReseau = Join online game
+creerUnePartieEnReseau = Create online game
