--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -7,7 +7,6 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
-    needs: test
    
     steps:
       - uses: actions/checkout@v4
@@ -26,7 +25,8 @@ jobs:
   deploy:
     name: Build
     runs-on: ubuntu-latest
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}=
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
+    needs: test
    
     steps:
       - uses: actions/checkout@v4
